[gd_scene load_steps=12 format=3 uid="uid://do6gwn47eylu7"]

[ext_resource type="Script" path="res://scripts/combat_scene.gd" id="1_3ou8c"]
[ext_resource type="Script" path="res://scripts/Targeting.gd" id="2_0pyv8"]
[ext_resource type="Script" path="res://scripts/SpellSelect.gd" id="3_2dlvl"]
[ext_resource type="Script" path="res://scripts/combat_manager.gd" id="4_ucgqt"]
[ext_resource type="PackedScene" uid="uid://sdwnoh61gawa" path="res://scenes/reusables/skill_info.tscn" id="5_2x1un"]
[ext_resource type="FontFile" uid="uid://ca0ii6rndnaqf" path="res://assets/pokemon_pixel_font.ttf" id="5_wtw4i"]
[ext_resource type="PackedScene" uid="uid://rtk527cyr7kb" path="res://scenes/reusables/combat_currency.tscn" id="6_b6b3n"]
[ext_resource type="Texture2D" uid="uid://bsae24ot6vmo6" path="res://assets/battle_bg.jpg" id="7_qh8p2"]

[sub_resource type="LabelSettings" id="LabelSettings_mo5rj"]
font = ExtResource("5_wtw4i")
font_size = 90

[sub_resource type="LabelSettings" id="LabelSettings_g8qlp"]
font = ExtResource("5_wtw4i")
font_size = 36

[sub_resource type="LabelSettings" id="LabelSettings_dcmsy"]
font_size = 291
outline_size = 9
outline_color = Color(0, 0, 0, 1)

[node name="Combat" type="Node2D"]
script = ExtResource("1_3ou8c")

[node name="StateMachine" type="Node" parent="."]

[node name="Targeting" type="Node" parent="StateMachine"]
script = ExtResource("2_0pyv8")

[node name="SpellSelect" type="Node" parent="StateMachine"]
script = ExtResource("3_2dlvl")

[node name="CombatManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("4_ucgqt")

[node name="TurnText" type="Label" parent="CombatManager"]
offset_left = 829.0
offset_top = 25.0
offset_right = 1035.0
offset_bottom = 92.0
text = "Ally Turn"
label_settings = SubResource("LabelSettings_mo5rj")

[node name="TargetingLabel" type="Label" parent="CombatManager"]
visible = false
offset_left = 30.0
offset_top = 738.0
offset_right = 262.0
offset_bottom = 840.0
text = "Choosing target for:

(click on the sprite)"
label_settings = SubResource("LabelSettings_g8qlp")

[node name="TargetingSkillInfo" parent="CombatManager" instance=ExtResource("5_2x1un")]
visible = false
offset_left = 288.0
offset_top = 709.0
offset_right = 288.0
offset_bottom = 709.0

[node name="CombatCurrency" parent="CombatManager" instance=ExtResource("6_b6b3n")]

[node name="Ally 1 Spot" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(95, 300)

[node name="Ally 2 Spot" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(330, 300)

[node name="Ally 3 Spot" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(565, 300)

[node name="Ally 4 Spot" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(800, 300)

[node name="Enemy 1 Spot" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(1005, 150)

[node name="Enemy 2 Spot" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(1228, 150)

[node name="Enemy 3 Spot" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(1453, 150)

[node name="Enemy 4 Spot" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(1676, 150)

[node name="EndTurn" type="Button" parent="."]
offset_left = 1521.0
offset_top = 800.0
offset_right = 1681.0
offset_bottom = 837.0
text = "End Turn"

[node name="ResetChoices" type="Button" parent="."]
offset_left = 490.0
offset_top = 942.0
offset_right = 639.0
offset_bottom = 977.0
scale = Vector2(0.705, 0.705)
text = "Reset Choices"

[node name="Background" type="Sprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0.411)
z_index = -5
position = Vector2(963, 539.5)
scale = Vector2(1.708, 1.703)
texture = ExtResource("7_qh8p2")

[node name="Loading" type="Node2D" parent="."]
visible = false

[node name="Label" type="Label" parent="Loading"]
z_index = 5
offset_left = 11.0
offset_top = 393.0
offset_right = 1924.0
offset_bottom = 649.0
text = "Loading...
"
label_settings = SubResource("LabelSettings_dcmsy")
horizontal_alignment = 1

[node name="ColorRect" type="ColorRect" parent="Loading"]
z_index = 3
offset_left = -18.0
offset_right = 1953.0
offset_bottom = 1091.0
color = Color(0.18359, 0.18359, 0.18359, 1)

[connection signal="new_spell_selected" from="CombatManager" to="StateMachine/SpellSelect" method="_on_combat_manager_new_spell_selected"]
[connection signal="target_selected" from="CombatManager" to="StateMachine/Targeting" method="_on_combat_manager_target_selected"]
[connection signal="pressed" from="EndTurn" to="CombatManager" method="_on_end_turn_pressed"]
[connection signal="pressed" from="ResetChoices" to="CombatManager" method="_on_reset_choices_pressed"]
